# NewsScraperAI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
ai_news_fetcher/: manage.py
ai_news_fetcher/ai_news_fetcher/: asgi.py  settings.py  urls.py  wsgi.py
