[project]
name = "django-nextjs-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "django>=5.1.7",
    "djangorestframework>=3.15.2",
    "jwt>=1.3.1",
    "langchain>=0.3.20",
    "langchain-core>=0.3.43",
    "langchain-groq>=0.2.5",
    "langchain-ollama>=0.2.3",
    "python-jose>=3.4.0",
    "requests>=2.32.3",
    "scrapy>=2.12.0",
    "selenium>=4.29.0",
]
